# manun

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clang_format.sh
.github/workflows/: main.yml
config/: config.cmake
example/: CMakeLists.txt
example/src/: Chat.cpp  Chat.h  ChatProtocol.h  Client.cpp  Client.h  IEndpoint.h  Server.cpp  Server.h  SineGenerator.cpp  SineGenerator.h  SineGenerator.ui  SineProtocol.h  SineViewer.cpp  SineViewer.h  SineViewer.ui  Socket.cpp  Socket.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/manun/: convert.h  convert_proxy.h  converter_factory.h  function_map.h  includes  manun_exceptions.h  std_type_converter.h  type_name_map.h  utilities.h
src/: converter_factory.cpp  function_map.cpp  manun_exceptions.cpp  type_name_map.cpp  utilities.cpp
test/: CMakeLists.txt
test/src/: main.cpp  test_manun.cpp  test_manun_functions.cpp
